# Media-Player

GloApp/: CMakeLists.txt
GloApp/assets/: close  image  music  next  pause  photo  play  previous  slideshow  stop  upload  volume
GloApp/headers/: ImagePlayback.h  Resource.h  RootFrame.h  VideoPlayback.h
GloApp/src/: ImagePlayback.cpp  Resource.cpp  RootFrame.cpp  VideoPlayback.cpp  main.cpp
